--- a/prayers2.0/package.json
+++ b/prayers2.0/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.329.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@react-email/render": "^0.0.7",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@fortawesome/fontawesome-free": "^6.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1374.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.20.0",
     "mdb-react-ui-kit": "^6.0.0",
