--- a/prayers2.0/package.json
+++ b/prayers2.0/package.json
@@ -2,6 +2,7 @@
   "name": "prayers2.0",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/briandorantes1995/Prayers2.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@react-email/render": "^0.0.7",
@@ -24,6 +25,8 @@
   },
   "scripts": {
     "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
