--- a/prayers2.0/package.json
+++ b/prayers2.0/package.json
@@ -20,6 +20,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -27,8 +29,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +51,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "@babel/preset-env": "^7.21.5",
+    "cypress": "^12.13.0",
+    "gh-pages": "^5.0.0",
+    "jest": "^27.5.1"
   }
 }
